Espresso: add support for --enable-native-access